# Polygonization-Point-Sets-2d

./: README.md
evaluation/: CMakeLists.txt  README.md  comparison.txt  convex_hull.cpp  evaluate.cpp  evaluate.h  helper_functions.cpp  incremental.cpp  local_search.cpp  modified_convex_hull.cpp  modified_incremental.cpp  optimization.cpp  optimization.h  polygonization.cpp  polygonization.h  simulated_annealing.cpp
instances/: euro-night-0000010.instance  euro-night-0000020.instance  euro-night-0000050.instance  euro-night-0000100.instance  euro-night-0000200.instance  euro-night-0000300.instance  euro-night-0000500.instance  euro-night-0001000.instance  euro-night-0002000.instance  euro-night-0005000.instance  euro-night-0010000.instance  euro-night-0020000.instance  euro-night-0050000.instance  stars-0000010.instance  stars-0000020.instance  stars-0000050.instance  stars-0000100.instance  stars-0000200.instance  stars-0000500.instance  uniform-0000010-1.instance  uniform-0000020-1.instance  uniform-0000050-1.instance  uniform-0000100-1.instance  uniform-0000200-1.instance  uniform-0000500-1.instance  uniform-0001000-1.instance  us-night-0000010.instance  us-night-0000020.instance  us-night-0000050.instance  us-night-0000100.instance  us-night-0000200.instance  us-night-0000500.instance  us-night-0001000.instance
optimization/: CMakeLists.txt  README.md  convex_hull.cpp  incremental.cpp  local_search.cpp  modified_convex_hull.cpp  modified_incremental.cpp  optimization.cpp  optimization.h  polygonization.cpp  polygonization.h  simulated_annealing.cpp
polygonization/: CMakeLists.txt  README.md  convex_hull.cpp  helper_functions.cpp  incremental.cpp  polygonization.cpp  polygonization.h
